--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <body>
     <main class="main" id="main">
       <section class="left">
-        <img class="plant" alt="plant" id="plant1" src="./images/plant1.png" />
-        <img class="plant" alt="plant" id="plant2" src="./images/plant2.png" />
-        <img class="plant" alt="plant" id="plant3" src="./images/plant3.png" />
-        <img class="plant" alt="plant" id="plant4" src="./images/plant4.png" />
-        <img class="plant" alt="plant" id="plant5" src="./images/plant5.png" />
-        <img class="plant" alt="plant" id="plant6" src="./images/plant6.png" />
-        <img class="plant" alt="plant" id="plant7" src="./images/plant7.png" />
+        <div class="plant__holder"><img class="plant" alt="plant" id="plant1" src="./images/plant1.png" /></div>
+        <div class="plant__holder"><img class="plant" alt="plant" id="plant2" src="./images/plant2.png" /></div>
+        <div class="plant__holder"><img class="plant" alt="plant" id="plant3" src="./images/plant3.png" /></div>
+        <div class="plant__holder"><img class="plant" alt="plant" id="plant4" src="./images/plant4.png" /></div>
+        <div class="plant__holder"><img class="plant" alt="plant" id="plant5" src="./images/plant5.png" /></div>
+        <div class="plant__holder"><img class="plant" alt="plant" id="plant6" src="./images/plant6.png" /></div>
+        <div class="plant__holder"><img class="plant" alt="plant" id="plant7" src="./images/plant7.png" /></div>
       </section>
       <section class="jar">
         <h1 class="jar__title">My Terrarium</h1>
@@ -35,38 +35,13 @@
         </div>
       </section>
       <section class="right">
-        <img class="plant" alt="plant" id="plant8" src="./images/plant8.png" />
-        <img class="plant" alt="plant" id="plant9" src="./images/plant9.png" />
-        <img
-          class="plant"
-          alt="plant"
-          id="plant10"
-          src="./images/plant10.png"
-        />
-        <img
-          class="plant"
-          alt="plant"
-          id="plant11"
-          src="./images/plant11.png"
-        />
-        <img
-          class="plant"
-          alt="plant"
-          id="plant12"
-          src="./images/plant12.png"
-        />
-        <img
-          class="plant"
-          alt="plant"
-          id="plant13"
-          src="./images/plant13.png"
-        />
-        <img
-          class="plant"
-          alt="plant"
-          id="plant14"
-          src="./images/plant14.png"
-        />
+        <div class="plant__holder"><img class="plant" alt="plant" id="plant8" src="./images/plant8.png" /></div>
+        <div class="plant__holder"><img class="plant" alt="plant" id="plant9" src="./images/plant9.png" /></div>
+        <div class="plant__holder"><img class="plant" alt="plant" id="plant10" src="./images/plant10.png" /></div>
+        <div class="plant__holder"><img class="plant" alt="plant" id="plant11" src="./images/plant11.png" /></div>
+        <div class="plant__holder"><img class="plant" alt="plant" id="plant12" src="./images/plant12.png" /></div>
+        <div class="plant__holder"><img class="plant" alt="plant" id="plant13" src="./images/plant13.png" /></div>
+        <div class="plant__holder"><img class="plant" alt="plant" id="plant14" src="./images/plant14.png" /></div>
       </section>
     </main>
   </body>
