--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <title>Terrarium</title>
 
     <link rel="stylesheet" href="./style.css" />
@@ -14,13 +14,62 @@
   <body>
     <main class="main" id="main">
       <section class="left">
-        <img class="plant" alt="Drawing of a fern with multiple small and round leaves." id="plant1" src="./images/plant1.png" />
-        <img class="plant" alt="Green succulent" id="plant2" src="./images/plant2.png" />
-        <img class="plant" alt="Pink succulent" id="plant3" src="./images/plant3.png" />
-        <img class="plant" alt="Shrub with green leaves and brown flowers" id="plant4" src="./images/plant4.png" />
-        <img class="plant" alt="Branch of a plant with long leaves with a bluish-green hue" id="plant5" src="./images/plant5.png" />
-        <img class="plant" alt="Branch of a plant with long leaves with a green hue" id="plant6" src="./images/plant6.png" />
-        <img class="plant" alt="Echeveria plant" id="plant7" src="./images/plant7.png" />
+        <div class="plant__holder">
+          <img
+            class="plant"
+            alt="Drawing of a fern with multiple small and round leaves."
+            id="plant1"
+            src="./images/plant1.png"
+          />
+        </div>
+        <div class="plant__holder">
+          <img
+            class="plant"
+            alt="Green succulent"
+            id="plant2"
+            src="./images/plant2.png"
+          />
+        </div>
+        <div class="plant__holder">
+          <img
+            class="plant"
+            alt="Pink succulent"
+            id="plant3"
+            src="./images/plant3.png"
+          />
+        </div>
+        <div class="plant__holder">
+          <img
+            class="plant"
+            alt="Shrub with green leaves and brown flowers"
+            id="plant4"
+            src="./images/plant4.png"
+          />
+        </div>
+        <div class="plant__holder">
+          <img
+            class="plant"
+            alt="Branch of a plant with long leaves with a bluish-green hue"
+            id="plant5"
+            src="./images/plant5.png"
+          />
+        </div>
+        <div class="plant__holder">
+          <img
+            class="plant"
+            alt="Branch of a plant with long leaves with a green hue"
+            id="plant6"
+            src="./images/plant6.png"
+          />
+        </div>
+        <div class="plant__holder">
+          <img
+            class="plant"
+            alt="Echeveria plant"
+            id="plant7"
+            src="./images/plant7.png"
+          />
+        </div>
       </section>
       <section class="jar">
         <h1 class="jar__title">My Terrarium</h1>
@@ -35,38 +84,62 @@
         </div>
       </section>
       <section class="right">
-        <img class="plant" alt="Small cactus with multiple branches and flowers ot the tips" id="plant8" src="./images/plant8.png" />
-        <img class="plant" alt="Drawing of a small dark green succulent" id="plant9" src="./images/plant9.png" />
-        <img
-          class="plant"
-          alt="Plant with green leaves with ochre and serrated edge"
-          id="plant10"
-          src="./images/plant10.png"
-        />
-        <img
-          class="plant"
-          alt="Tall cactus with multiple spikes"
-          id="plant11"
-          src="./images/plant11.png"
-        />
-        <img
-          class="plant"
-          alt="Agave geminiflora of long and thin leaves"
-          id="plant12"
-          src="./images/plant12.png"
-        />
-        <img
-          class="plant"
-          alt="Nopal cactus with several outbreaks"
-          id="plant13"
-          src="./images/plant13.png"
-        />
-        <img
-          class="plant"
-          alt="Small round cactus with many spikes"
-          id="plant14"
-          src="./images/plant14.png"
-        />
+        <div class="plant__holder">
+          <img
+            class="plant"
+            alt="Small cactus with multiple branches and flowers ot the tips"
+            id="plant8"
+            src="./images/plant8.png"
+          />
+        </div>
+        <div class="plant__holder">
+          <img
+            class="plant"
+            alt="Drawing of a small dark green succulent"
+            id="plant9"
+            src="./images/plant9.png"
+          />
+        </div>
+        <div class="plant__holder">
+          <img
+            class="plant"
+            alt="Plant with green leaves with ochre and serrated edge"
+            id="plant10"
+            src="./images/plant10.png"
+          />
+        </div>
+        <div class="plant__holder">
+          <img
+            class="plant"
+            alt="Tall cactus with multiple spikes"
+            id="plant11"
+            src="./images/plant11.png"
+          />
+        </div>
+        <div class="plant__holder">
+          <img
+            class="plant"
+            alt="Agave geminiflora of long and thin leaves"
+            id="plant12"
+            src="./images/plant12.png"
+          />
+        </div>
+        <div class="plant__holder">
+          <img
+            class="plant"
+            alt="Nopal cactus with several outbreaks"
+            id="plant13"
+            src="./images/plant13.png"
+          />
+        </div>
+        <div class="plant__holder">
+          <img
+            class="plant"
+            alt="Small round cactus with many spikes"
+            id="plant14"
+            src="./images/plant14.png"
+          />
+        </div>
       </section>
     </main>
   </body>
