--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Terrarium</title>
 
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/style/style.css" />
 
     <script src="./index.js" defer></script>
   </head>
